dev_server.log

> mile@0.1.0 dev
> next dev

▲ Next.js 16.2.4 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.0.2:3000
- Environments: .env.local, .env
✓ Ready in 565ms

 GET / 200 in 1023ms (next.js: 264ms, application-code: 759ms)
 GET / 200 in 178ms (next.js: 11ms, application-code: 166ms)
 GET /api/store 200 in 307ms (next.js: 146ms, application-code: 161ms)
 GET /api/store 200 in 73ms (next.js: 24ms, application-code: 48ms)
TypeError: fetch failed
    at async POST (src/app/api/auth/setup/route.ts:21:42)
  19 |         // Ensure Supabase URL is accessible, otherwise we are in a mock/test environment
  20 |         try {
> 21 |             const { error: listError } = await supabase.auth.admin.listUsers();
     |                                          ^
  22 |             if (listError) throw listError;
  23 |         } catch (e) {
  24 |             console.warn("Supabase Auth unreachable or failed. Bypassing setup for test en... {
  [cause]: AggregateError:
      at ignore-listed frames {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  }
}
Supabase Auth unreachable or failed. Bypassing setup for test environment.
 POST /api/auth/setup 200 in 649ms (next.js: 97ms, application-code: 552ms)
TypeError: fetch failed
    at async POST (src/app/api/auth/setup/route.ts:21:42)
  19 |         // Ensure Supabase URL is accessible, otherwise we are in a mock/test environment
  20 |         try {
> 21 |             const { error: listError } = await supabase.auth.admin.listUsers();
     |                                          ^
  22 |             if (listError) throw listError;
  23 |         } catch (e) {
  24 |             console.warn("Supabase Auth unreachable or failed. Bypassing setup for test en... {
  [cause]: AggregateError:
      at ignore-listed frames {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  }
}
Supabase Auth unreachable or failed. Bypassing setup for test environment.
 POST /api/auth/setup 200 in 195ms (next.js: 12ms, application-code: 183ms)
 GET /planes 200 in 1082ms (next.js: 540ms, application-code: 542ms)
 GET /api/store 200 in 61ms (next.js: 11ms, application-code: 50ms)
 GET / 200 in 67ms (next.js: 4ms, application-code: 63ms)
 GET /api/store 200 in 53ms (next.js: 5ms, application-code: 47ms)
TypeError: fetch failed
    at async POST (src/app/api/auth/setup/route.ts:21:42)
  19 |         // Ensure Supabase URL is accessible, otherwise we are in a mock/test environment
  20 |         try {
> 21 |             const { error: listError } = await supabase.auth.admin.listUsers();
     |                                          ^
  22 |             if (listError) throw listError;
  23 |         } catch (e) {
  24 |             console.warn("Supabase Auth unreachable or failed. Bypassing setup for test en... {
  [cause]: AggregateError:
      at ignore-listed frames {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  }
}
Supabase Auth unreachable or failed. Bypassing setup for test environment.
 POST /api/auth/setup 200 in 180ms (next.js: 7ms, application-code: 173ms)
